# lib/database-models/users.js
@@ -1,0 +1,29 @@
+/**
+ * Users Model for Sequelize
+ */
+
+module.exports = function(sequelize, DataTypes) {
+    return sequelize.define('users', {
+        id: {
+            type: DataTypes.INTEGER,
+            allowNull: false,
+            primaryKey: true,
+            autoIncrement: true
+        },
+        username: {
+            type: DataTypes.STRING,
+            allowNull: true
+        },
+        password: {
+            type: DataTypes.STRING,
+            allowNull: true
+        },
+        email: {
+            type: DataTypes.STRING,
+            allowNull: true
+        }
+    }, {
+        timestamps: false,
+        tableName: 'users'
+    });
+};
